hphp/test/zend/good/ext/mbstring/tests/mb_convert_kana.php.skipif
<?php
if (!extension_loaded('mbstring')) die('skip mbstring not enabled');
if (!function_exists("mb_convert_kana")) print "skip mb_convert_kana() not available";
?>