hphp/test/zend/bad/ext/mbstring/tests/mb_eregi.php.skipif
<?php
if (!extension_loaded('mbstring')) die('skip mbstring not enabled');
if (!function_exists("mb_eregi")) print "skip mb_eregi() not available";
?>